# Text_to_analytics_SUAI

./: .env.example  .gitignore  README.md  app.py  pyproject.toml
.streamlit/: config.toml
backend/: __init__.py  main.py  session.py
data/: make_sample.py  sample_customers_ru.csv  sample_sales_ru.csv
eval/: gold.yaml  run_eval.py
frontend/: package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: Chat.tsx  DataTable.tsx  Eda.tsx  MergeControl.tsx  QuickStart.tsx  Sidebar.tsx  VegaChart.tsx  controls.tsx  nav.ts  panels.tsx  ui.tsx
frontend/lib/: api.ts
t2a/: __init__.py  abtest.py  chart_builder.py  charts.py  cleaning.py  cohort.py  drivers.py  eda.py  execute.py  insights.py  llm.py  narrate.py  pivot.py  probability.py  profile.py  report.py  sources.py  sql_gen.py  sql_guard.py  stats.py  theme.py  timeseries.py  transform.py
