[project]
name = "text-to-analytics"
version = "0.1.0"
description = "Text-to-analytics: ask a CSV/XLSX in natural language, get SQL, charts and auto-insights."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.40",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.12",
    "duckdb>=1.1",
    "sqlglot>=25.0",
    "altair>=5.4",
    "pandas>=2.2",
    "numpy>=1.26",
    "scipy>=1.14",
    "statsmodels>=0.14",
    "httpx>=0.27",
    "openpyxl>=3.1",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["t2a"]
